connectivity/manifests/echo-ingress-icmp-deny.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: client-ingress-from-other-client-icmp-deny
spec:
  description: "Deny other client to contact another client via ICMP"
  endpointSelector:
    matchLabels:
      kind: client
  ingressDeny:
  - fromEndpoints:
    - matchLabels:
        other: client
    icmps:
    - fields:
      - type: 8
        family: "IPv4"
      - type: 128
        family: "IPv6"
